--- a/mono_vo/CMakeLists.txt
+++ b/mono_vo/CMakeLists.txt
@@ -6,5 +6,10 @@ if(OpenCV_FOUND)
     include_directories(${OpenCV_INCLUDE_DIRS})
 endif()
 
-add_executable( mono_vo mono_vo.cpp )
-target_link_libraries( mono_vo ${OpenCV_LIBS} )
+include_directories( include )
+
+add_executable( mono_vo_01 mono_vo_01.cpp)
+target_link_libraries( mono_vo_01 ${OpenCV_LIBS} )
+
+add_executable( mono_vo_02 main.cpp src/visual_odometry.cpp src/pinhole_camera.cpp )
+target_link_libraries( mono_vo_02 ${OpenCV_LIBS} )
